# auto_aim

./: CMakeLists.txt  README.md  ekf.yml  launch.cfg  main.cpp  main.hpp
asset/: cam_param_hero.yml  cam_param_inf1.yml  cam_param_inf2.yml  cam_param_inf3.yml  cam_param_sentry.yml
bash/: auto-aim-help.sh  auto-aim-restart.sh  auto-aim-start.sh  auto-aim-stop.sh
comm/: CMakeLists.txt  comm.cpp  comm.hpp  crc.hpp  protocol.cpp  protocol.h
common/: CMakeLists.txt  common.hpp  datatype.hpp  pipline.hpp
common/cmd_parser/: cmd_parser.cpp  cmd_parser.hpp
common/log/: log.cpp  log.hpp
common/timer/: timer.cpp  timer.hpp
detect/: CMakeLists.txt  TRTModule.cpp  TRTModule.hpp  detect.cpp  detect.hpp
predict/: CMakeLists.txt  LinearPredictor.cpp  LinearPredictor.hpp  StaticPredictor.cpp  StaticPredictor.hpp  extended_kalman_filter.cpp  extended_kalman_filter.hpp  kalman.h  predict.cpp  predict.hpp  tools.hpp
sensor/: CMakeLists.txt  cam_wrapper.hpp  imu.hpp  sensor.cpp  sensor.hpp
sensor/UartIMU/: uartimu.cpp  uartimu.hpp
sensor/hikcam/: hikcam_wrapper.cpp  hikcam_wrapper.hpp
sensor/video/: video_wrapper.cpp  video_wrapper.hpp
